--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Périmètre</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
 </head>
 
 <body class="container">
-    <h1>Périmètre 10 km</h1>
+    <h1 class="mt-3">Périmètre 10 km</h1>
     <hr>
     <p>Saisissez une adresse :</p>
-    <input type="text" class="form-control" id="address-input">
+    <div class="input-group">
+        <span class="input-group-text" id="basic-addon1"><i class="bi bi-geo-alt"></i></span>
+        <input type="text" class="form-control py-2 border-right-0 border" placeholder="Ecrivez votre adresse" id="address-input">
+        <button class="btn btn-outline-secondary border-left-0 border" id="clearButton" type="button">
+                <i class="bi bi-x"></i>
+            </button>
+    </div>
     <div class="list-group" id="list" style="position: absolute; z-index: 99999;width:100%">
     </div>
     <br>
@@ -61,6 +67,10 @@
                     // your function here
             });
 
+            $("#clearButton").click(() => {
+                $("#address-input").val("")
+            })
+
             $("#address-input").on("input", function() {
                 api()
             });
@@ -90,7 +100,9 @@
             }
 
             mise_a_jour_map(50, 2)
-
+            $("body").click(() => {
+                $("#list").empty()
+            })
 
         });
     </script>
