--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </div>
     <br>
 
+    <div id="mapid" style="height: 500px"></div>
+
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
@@ -56,6 +58,7 @@
 
 
 
+            $('#toastCookie').toast('show');
 
             var inputAddress = document.getElementById("address-input")
             var list = document.getElementById("list")
