--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
                     expires = "; expires=" + date.toUTCString();
                 }
-                document.cookie = name + "=" + (value || "") + expires + "; path=/perimeter-map;domain=remialban.github.com";
+                document.cookie = name + "=" + (value || "") + expires + "; path=/perimeter-map;domain=remialban.github.io";
             }
 
             function getCookie(name) {
