--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 setCookie("longitude", long, 99999)
                 setCookie("latitude", lat, 99999)
                 setCookie("address", address, 99999)
+                $("#address-input").val(address)
             }
             if (getCookie("longitude") == null) {
 
