--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-
 </head>
 
 <body class="container">
@@ -157,10 +156,17 @@
                 setCookie("longitude", long, 99999)
                 setCookie("latitude", lat, 99999)
                 setCookie("address", address, 99999)
-                $("#address-input").val(address)
+                if (address != null) {
+                    $("#address-input").val(address)
+                } else {
+                    address = "Paris"
+                }
+
+                marker.bindPopup(address).openPopup()
+
             }
             if (getCookie("longitude") == null) {
-                mise_a_jour_map(48.856614, 2.3522219, "Paris")
+                mise_a_jour_map(48.856614, 2.3522219, null)
             } else {
                 mise_a_jour_map(getCookie("longitude"), getCookie("latitude"), getCookie("address"))
             }
