--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     address = "Paris"
                 }
 
-                marker.bindPopup(address).openPopup()
+                marker.bindPopup(address)
 
             }
             if (getCookie("longitude") == null) {
