--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                         ni stockées et ni partagées avec des serveurs externes.</p>
                 </div>
                 <div class="modal-footer">
-                    <!--<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="buttonAcceptCookie">J'accèpte</button>
                 </div>
             </div>
@@ -49,141 +48,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
-    <script>
-        $(document).ready(function() {
-            $("#buttonAcceptCookie").click(() => {
-                setCookie("cookie_accepted", "true", 99999)
-            })
-
-            if (getCookie("cookie_accepted") != "true") {
-                var myModal = new bootstrap.Modal(document.getElementById('modalCookie'))
-                myModal.show()
-            }
-
-
-            function setCookie(name, value, days) {
-                var expires = "";
-                if (days) {
-                    var date = new Date();
-                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-                    expires = "; expires=" + date.toUTCString();
-                }
-                document.cookie = name + "=" + (value || "") + expires + "; path=/perimeter-map;domain=remialban.github.io";
-                //document.cookie = name + "=" + (value || "") + expires + "; path=/";
-
-            }
-
-            function getCookie(name) {
-                var nameEQ = name + "=";
-                var ca = document.cookie.split(';');
-                for (var i = 0; i < ca.length; i++) {
-                    var c = ca[i];
-                    while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-                    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-                }
-                return null;
-            }
-
-
-
-            $('#toastCookie').toast('show');
-
-            var inputAddress = document.getElementById("address-input")
-            var list = document.getElementById("list")
-
-            function api() {
-
-                fetch("https://api-adresse.data.gouv.fr/search/?q=" + inputAddress.value).then((response) => {
-                    if (response.ok) {
-                        response.json().then((data) => {
-                            addresses = data.features
-                            list.innerHTML = ""
-                            list.innerText = ""
-                            $("#list").empty();
-                            addresses.map((address) => {
-                                $("#list").append(
-                                    "<a href='#' class='list-group-item list-group-item-action item_address' data-latitude='" + address.geometry.coordinates[0] + "'' data-longitude='" + address.geometry.coordinates[1] + "'>" + address.properties.label + "</a>"
-                                )
-
-                            })
-                        })
-
-
-
-                    }
-                })
-
-            }
-            $(document).on('click', '.item_address', function() {
-                var element = $(this)
-                $("#address-input").val(element.text())
-                $("#list").empty()
-                mise_a_jour_map(element.data("longitude"), element.data("latitude"), element.text())
-                    // your function here
-            });
-
-            $("#clearButton").click(() => {
-                $("#address-input").val("")
-            })
-
-            $("#address-input").on("input", function() {
-                api()
-            });
-            var mymap = L.map('mapid');
-            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                maxZoom: 18,
-                id: 'mapbox/streets-v11',
-                tileSize: 512,
-                zoomOffset: -1,
-                accessToken: 'pk.eyJ1IjoicmVtaWFsYmFuODEiLCJhIjoiY2tuZGxkMng2MWlmMTJ2bXJtb3BmMTF3OSJ9.2ElAN4jWXxxMaLIhXyxV-Q'
-            }).addTo(mymap)
-
-            var circle = L.circle([0, 0], {
-                color: 'red',
-                fillColor: '#f03',
-                fillOpacity: 0.5,
-                radius: 10000
-            }).addTo(mymap)
-            var marker = L.marker([0, 0]).addTo(mymap);
-
-            function mise_a_jour_map(long, lat, address) {
-                marker.setLatLng([long, lat])
-                circle.setLatLng([long, lat])
-                mymap.setView([long, lat], 11);
-                console.log(long)
-
-                if (address != null) {
-                    $("#address-input").val(address)
-                    setCookie("longitude", long, 99999)
-                    setCookie("latitude", lat, 99999)
-                    setCookie("address", address, 99999)
-                    marker.bindPopup(address)
-                }
-            }
-
-            function onLocationFound(e) {
-                console.log(e)
-                mise_a_jour_map(e.latitude, e.longitude, null)
-            }
-            if (getCookie("longitude") == null) {
-                mise_a_jour_map(48.856614, 2.3522219)
-                mymap.locate({
-                    setView: true,
-                    maxZoom: 18
-                });
-                mymap.on('locationfound', onLocationFound);
-            } else {
-                mise_a_jour_map(getCookie("longitude"), getCookie("latitude"), getCookie("address"))
-            }
-            //mise_a_jour_map(50, 2)
-            $("body").click(() => {
-                $("#list").empty()
-            })
-            console.log(getCookie("longitude"))
-        });
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
