--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             </div>
         </div>
     </div>
-
+    <hr>
+    <footer>
+        <p>Cette <a href="https://github.com/remialban/perimeter-app">application</a> a été développé sur <a href="https://github.com/remialban">Rémi ALBAN</a> et hébergé par <a href="https://github.com">Github</a>. Carte proposée par <a href="#">©OpenStreepMap</a>            et design proposé par <a href="https://getbootstrap.com/">©Bootstrap</a>. La saisie semi-automatique des addresses a été faite avec l'<a href="https://api.gouv.fr/les-api/base-adresse-nationale">API Adresse</a> du <a href="https://www.gouvernement.fr/">gouvernement français.<a></a></p>
+    </footer>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
