--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <hr>
     <footer>
-        <p>Cette <a href="https://github.com/remialban/perimeter-app">application</a> a été développé sur <a href="https://github.com/remialban">Rémi ALBAN</a> et hébergé par <a href="https://github.com">Github</a>. Carte proposée par <a href="#">©OpenStreepMap</a>            et design proposé par <a href="https://getbootstrap.com/">©Bootstrap</a>. La saisie semi-automatique des addresses a été faite avec l'<a href="https://api.gouv.fr/les-api/base-adresse-nationale">API Adresse</a> du <a href="https://www.gouvernement.fr/">gouvernement français.<a></a></p>
+        <p>Cette <a href="https://github.com/remialban/perimeter-app">application</a> a été développé par <a href="https://github.com/remialban">Rémi ALBAN</a> et hébergé sur <a href="https://github.com">Github</a>. Cette carte a été proposée par <a href="#">©OpenStreepMap</a>            et le design par <a href="https://getbootstrap.com/">©Bootstrap</a>. La saisie semi-automatique des adresses a été faite avec l'<a href="https://api.gouv.fr/les-api/base-adresse-nationale">API Adresse</a> du <a href="https://www.gouvernement.fr/">gouvernement français.<a></a></p>
     </footer>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
