--- a/index.html
+++ b/index.html
@@ -44,27 +44,17 @@
             </div>
         </div>
     </div>
+    <a href="#" role="button" class="mt-3 btn btn-dark btn-sm" id="btn_scroll_to_to_page"><i class="bi bi-arrow-up"></i> Revenir en haut de la page</a>
     <hr>
     <footer>
         <p>Cette <a href="https://github.com/remialban/perimeter-app">application</a> a été développé par <a href="https://github.com/remialban">Rémi ALBAN</a> et hébergé sur <a href="https://github.com">Github</a>. Cette carte est proposée par <a href="#">©OpenStreepMap</a>            et le design par <a href="https://getbootstrap.com/">©Bootstrap</a>. La saisie semi-automatique des adresses a été réalisée avec l'<a href="https://api.gouv.fr/les-api/base-adresse-nationale">API Adresse</a> du <a href="https://www.gouvernement.fr/">gouvernement français</a>.</p>
     </footer>
-    <a href="#" tabindex="-1" role="button" class="btn btn-primary" id="btn_scroll_to_to_page"><i class="bi bi-arrow-up"></i></a>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="app.js"></script>
-
     <style>
-        #btn_scroll_to_to_page {
-            position: fixed;
-            right: 20px;
-            bottom: 20px;
-            z-index: 999999;
-            outline-color: green;
-        }
-        
         #btn_scroll_to_to_page:focus {
-            outline: none;
             box-shadow: none;
         }
     </style>
